# music-recommender

./: README.md  driver.py  pyproject.toml
app/: driver.py  recommender.py  song.py  user.py
app/entities/: library.py  playlist.py  song.py  user.py
app/recommendations/: basic_recommender.py
app/recommendations/strategy/: friend_similarity_calculator.py  strategy.py
app/strategy/: basic_recommender.py  friends_playlist_based_recommender.py  similarity_calculator.py  strategy.py
